--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
@@ -26,6 +27,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'com.h2database:h2:1.4.200'
     implementation 'com.github.oshi:oshi-core:5.3.5'
+    implementation 'com.github.akarazhev:json-simple:1.2'
 //    implementation 'net.mamoe:mirai-login-solver-selenium:1.0-dev-10'
 }
 
