--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'top.cubik65536'
-version '1.0-RC'
+version '1.1-alpha'
 
 repositories {
     maven { url "https://plugins.gradle.org/m2/" }
